# slides-factory

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.pi/: taskplane.json
.pi/skills/python-code-critique/: SKILL.md
dignoss/: 02_dynamic_models.md  04_brand_agnosticism.md  index.md
docs/: refactor-explicit-app.md  roadmap-v0.3.md  roadmap-v0.4-v0.5.md  v0.3-progress.md  v0.4-v0.5-features.md  v0.4-v0.5-update.md
docs/critique/: 00-executive-summary.md  04-color-system-consolidation.md  05-code-quality-and-testing.md  06-packaging-and-tooling.md
docs/dignoss/: 01_over_engineering.md  03_grid_impedance.md  05_god_object.md
docs/migration/: brand_agnosticism.md  legacy_document_api_tests.md
scripts/: test.sh
skills/: 01-setup.md  02-elements.md  03-frames.md  04-templates.md  05-brand-theme.md  06-cli-and-testing.md  07-app-lifecycle.md  README.md
slides_factory/: __init__.py  app.py  cli.py  color_utils.py  document.py  exceptions.py  frame.py  frame_info.py  geometry.py  layout_spec.py  locale.py  metadata.py  models.py  palette.py  registration.py  render_context.py  template.py  template_input.py  templating.py  typing_utils.py
slides_factory/brand/: __init__.py  doc.py  logos.py  theme.py
slides_factory/converters/: __init__.py  svg.py  text.py
slides_factory/converters/text/: __init__.py  dsl.py  html.py  model.py  render.py
slides_factory/core/: __init__.py  engine.py  grid.py  manager.py  resolver.py  session.py  tokens.py
slides_factory/elements/: __init__.py  base.py  card.py  image.py  text.py  text_element.py
slides_factory/elements/text/: __init__.py  dsl.py  html.py  model.py  render.py
slides_factory/layout/: __init__.py  debug.py  font_embed.py  fonts.py  grid.py  locks.py  pct.py  render.py  rtl.py  z_order.py
slides_factory/preview/: __init__.py  app.py  forms.py  frames.py  launcher.py  reload.py  render.py  run.py
slides_factory/styling/: __init__.py  models.py  theme.py  tokens.py
slides_factory/templates/: __init__.py
tests/: conftest.py  test_app.py  test_batch.py  test_brand.py  test_cli_builder.py  test_composition.py  test_core_services.py  test_debug_layout.py  test_default_theme_idempotent.py  test_document.py  test_elements.py  test_frame.py  test_frame_info.py  test_frame_slide.py  test_geometry.py  test_grid_layout.py  test_grid_slides.py  test_grid_template.py  test_imports.py  test_manager.py  test_palette.py  test_pct_layout.py  test_preview.py  test_preview_cli.py  test_preview_frames.py  test_preview_reload.py  test_registration.py  test_rich_text.py  test_rtl.py  test_shape_locks.py  test_streamlit_forms.py  test_styling_tokens.py  test_svg.py  test_templating.py  test_theme_resolver.py
tests/fixtures/: app.py  palettes.py  template_inputs.py
tests/fixtures/elements/: text.py
tests/fixtures/frames/: alt.py  chrome.py  cover.py  paneled.py  plain.py
tests/fixtures/templates/: _ignored.py  paired.py  simple.py  strict.py
themes/: default.pptx
