[project]
name = "slides-factory"
version = "0.2.0"
description = "Brand-agnostic PowerPoint slide factory — templates, frames, and document API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fonttools>=4.63.0",
    "lxml>=6.1.1",
    "pillow>=12.2.0",
    "pydantic>=2.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
preview = ["streamlit>=1.41"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slides_factory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
