[project]
name = "slides-factory"
version = "0.2.0"
description = "Brand-agnostic PowerPoint slide factory — templates, frames, and document API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Khalid Alrasheed"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Presentation",
]
dependencies = [
    "fonttools>=4.63.0",
    "lxml>=6.1.1",
    "pillow>=12.2.0",
    "pydantic>=2.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]
preview = ["streamlit>=1.41"]

[project.urls]
Homepage = "https://github.com/khalid-khalifah/slides-factory"
Source = "https://github.com/khalid-khalifah/slides-factory"
Issues = "https://github.com/khalid-khalifah/slides-factory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slides_factory"]
force-include = {"themes/default.pptx" = "themes/default.pptx"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B006",  # mutable defaults are intentional for typer options
    "B008",  # do not perform function calls in argument defaults
    "B024",  # abstract base classes without abstract methods (intentional)
    "F401",  # unused imports — some are kept for re-export compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["slides_factory"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
